# music-inbox

./: .gitignore  Makefile  README.md  pyproject.toml
music_inbox/: artwork.py  clean.py  folder2genre.py  genres.py  playlist2delete.py  qualitycheck.py
