[project]
authors = [
    {name = "Mathieu Leplatre", email = "mathieu@leplat.re"},
]
license = {text = "CC-0"}
requires-python = "<4,>3.10"
dependencies = [
    "aiohttp<4.0.0,>=3.8.4",
    "beautifulsoup4<5.0.0,>=4.12.0",
    "eyed3>=0.9.7,<1.0.0",
    "mutagen>=1.47.0",
    "numpy>=2.2.6",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "typer>=0.16.0",
]
name = "music-inbox"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
music-genres = "music_inbox.genres:main"
music-folder2genre = "music_inbox.folder2genre:main"
music-playlist2delete = "music_inbox.playlist2delete:main"
music-clean = "music_inbox.clean:main"
music-artwork = "music_inbox.artwork:main"

[tool.pdm.build]
includes = [
    "music_inbox",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
